Enabling beach rest services and adding angular services to access rest services

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -67,6 +67,9 @@
     <script src="app/services/user/user.service.js"></script>
     <script src="app/services/profiles/profile.service.js"></script>
     <script src="app/services/profiles/page-ribbon.directive.js"></script>
+    <script src="app/services/beach/region.service.js"></script>
+    <script src="app/services/beach/info.service.js"></script>
+    <script src="app/services/beach/beach.service.js"></script>
     <script src="app/services/auth/sessions.service.js"></script>
     <script src="app/services/auth/register.service.js"></script>
     <script src="app/services/auth/principal.service.js"></script>
@@ -121,6 +124,8 @@
     <script src="app/blocks/config/http.config.js"></script>
     <script src="app/blocks/config/compile.config.js"></script>
     <script src="app/blocks/config/alert.config.js"></script>
+    <script src="app/beach/beach.state.js"></script>
+    <script src="app/beach/beach.controller.js"></script>
     <script src="app/app.state.js"></script>
     <script src="app/app.constants.js"></script>
     <script src="app/admin/user-management/user-management-dialog.controller.js"></script>
