--- a/src/main/webapp/app/beach/beach.html
+++ b/src/main/webapp/app/beach/beach.html
@@ -4,7 +4,7 @@
             <span class="beach img-responsive img-rounded"></span>
         </div>
         <div class="col-md-8">
-            <h1>Welcome, Beach!</h1>
+            <h1>Welcome to Beach!</h1>
             <div class="container-fluid">
           <div class="row">
           	<div class="col-md-2">
@@ -25,9 +25,27 @@
 		   		<div class="col-md-6" >
 		   			<h2>{{vm.info.beach}}</h2>
 		   			<h5>{{vm.info.region}}</h5>
+		   			<div class="progress">
+					  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{vm.info.excellent}}"
+					  aria-valuemin="0" aria-valuemax="100" style="width:{{vm.info.excellent}}%">
+					    {{vm.info.excellent}}% (excellent)
+					  </div>
+					  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="{{vm.info.satisfactory}}"
+					  aria-valuemin="0" aria-valuemax="100" style="width:{{vm.info.satisfactory}}%">
+					    {{vm.info.satisfactory}}% (satisfactory)
+					  </div>
+					  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="{{vm.info.unsatisfactory}}"
+					  aria-valuemin="0" aria-valuemax="100" style="width:{{vm.info.unsatisfactory}}%">
+					    {{vm.info.unsatisfactory}}% (unsatisfactory)
+					  </div>
+					  
+					</div>
+					<ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>	
 		   		</div>
 			</div>
 		
         </div>
 	</div>
 </div>
+
+
