Moving map with beach location

--- a/src/main/webapp/app/beach/beach.html
+++ b/src/main/webapp/app/beach/beach.html
@@ -1,9 +1,9 @@
 <div ng-cloak>
 
-        <div class="col-md-4">
+        <div >
             <span class="beach img-responsive img-rounded"></span>
         </div>
-        <div class="col-md-8">
+        <div >
             <h1>Welcome to Beach!</h1>
             <div class="container-fluid">
           <div class="row">
@@ -40,7 +40,7 @@
 					  </div>
 					  
 					</div>
-					<ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>	
+					<ui-gmap-google-map center='map.center' zoom='map.zoom' pan='true'></ui-gmap-google-map>	
 		   		</div>
 			</div>
 		
