--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -72,6 +72,7 @@
     <script src="app/services/profiles/profile.service.js"></script>
     <script src="app/services/profiles/page-ribbon.directive.js"></script>
     <script src="app/services/beach/region.service.js"></script>
+    <script src="app/services/beach/location.service.js"></script>
     <script src="app/services/beach/info.service.js"></script>
     <script src="app/services/beach/beach.service.js"></script>
     <script src="app/services/auth/sessions.service.js"></script>
@@ -92,6 +93,12 @@
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
+    <script src="app/entities/beach-location/beach-location-dialog.controller.js"></script>
+    <script src="app/entities/beach-location/beach-location-detail.controller.js"></script>
+    <script src="app/entities/beach-location/beach-location-delete-dialog.controller.js"></script>
+    <script src="app/entities/beach-location/beach-location.state.js"></script>
+    <script src="app/entities/beach-location/beach-location.service.js"></script>
+    <script src="app/entities/beach-location/beach-location.controller.js"></script>
     <script src="app/entities/beach-info/beach-info-dialog.controller.js"></script>
     <script src="app/entities/beach-info/beach-info-detail.controller.js"></script>
     <script src="app/entities/beach-info/beach-info-delete-dialog.controller.js"></script>
